--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,10 @@ dependencies {
     implementation("androidx.cardview:cardview:1.0.0")
 
 
+    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.17.1'
+    implementation 'com.google.ar.sceneform:assets:1.17.1'
+
+
 }
 repositories {
     mavenCentral()
