--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.ar.sceneform.plugin'
 
 android {
     compileSdkVersion 30
@@ -72,9 +73,16 @@ dependencies {
 
     implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.17.1'
     implementation 'com.google.ar.sceneform:assets:1.17.1'
+    implementation 'com.google.ar:core:1.25.0'
+    implementation 'com.google.ar.sceneform:core:1.17.1'
 
 
 }
 repositories {
     mavenCentral()
 }
+
+sceneform.asset('sampledata/TocoToucan.obj',
+        'default',
+        'sampledata/TocoToucan.sfa',
+        'src/main/assets/TocoToucan')
