--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,7 @@ dependencies {
     implementation 'com.google.ar.sceneform:assets:1.17.1'
     implementation 'com.google.ar:core:1.25.0'
     implementation 'com.google.ar.sceneform:core:1.17.1'
-
+    implementation 'com.google.android.material:material:1.4.0'
 
 }
 repositories {
